# kalEmc

./: README.md  installation_and_testing_guide.md  launcher.py  pj_structure.py  requirements.txt  setup.cfg  setup.py  sys_tray.py  virtual mouse pointer controller.txt
KalEmc/: __init__.py  eye_tracker.py  gesture_controller.py  main.py  mouse_controller.py  utils.py  voice_listener.py
test/: __inir__.py  test_eye_tracker.py  test_gesture_controller.py  test_mouse_controller.py
