[metadata]
name = kalEmc
version = attr: eye_mouse_controller.__version__
description = Control your mouse pointer with eye movement and blinking gestures
long_description = file: README.md
long_description_content_type = text/markdown
author = kalEmc Team
author_email = example@example.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Utilities
    Topic :: Desktop Environment :: Accessibility

[options]
packages = find:
python_requires = >=3.8
install_requires =
    opencv-python>=4.7.0
    mediapipe>=0.10.0
    pyautogui>=0.9.54
    pynput>=1.7.6
    SpeechRecognition>=3.10.0
    PyAudio>=0.2.13
    numpy>=1.24.0

[options.entry_points]
console_scripts =
    eye-mouse = eye_mouse_controller.main:main

[options.extras_require]
dev =
    pytest>=7.0.0
    flake8>=4.0.0
    sphinx>=4.0.0
    black>=22.0.0